--- a/InformationalEndpoint/InformationalEndpoint.csproj
+++ b/InformationalEndpoint/InformationalEndpoint.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -17,6 +17,10 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Visual Studio\Visual Studio 2019\Projects\InformationalEndpoint\InformationalEndpoint\InformationalEndpoint.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>C:\Visual Studio\Visual Studio 2019\Projects\InformationalEndpoint\InformationalEndpoint\InformationalEndpoint.xml</DocumentationFile>
   </PropertyGroup>
 
