--- a/InformationalEndpoint/InformationalEndpoint.csproj
+++ b/InformationalEndpoint/InformationalEndpoint.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <Version>0.0.1-pre</Version>
+    <Version>0.0.2-pre</Version>
     <Authors>Steve Higgin</Authors>
     <Product>Informational Endpoint</Product>
     <Description>A library to provide an informational endpoint</Description>
